# chat

./: CMakeLists.txt  README.md  client.cpp  client.h  clientgui.cpp  globals.cpp  globals.h  history.txt  inf_users.txt  main.cpp  server.cpp  server.h
client/: client.cpp  client.h  clientgui.h  main.cpp
server/: CMakeLists.txt  globals.cpp  globals.h  main.cpp  server.cpp  server.h
